--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!--  <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Poke-Quiz</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module">
+      import {App} from './main.js';
+
+      document.addEventListener("DOMContentLoaded",function(){
+        const app = new App();
+        window.app = app;
+      });
+    </script>
   </body>
 </html>
